# shelfd

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
.github/workflows/: ci.yml
assets/: palettes.toml
src/: config.rs  cover_gen.rs  db.rs  flaresolverr.rs  main.rs  models.rs  opds.rs  scraper.rs  state.rs
src/app/: bootstrap.rs  mod.rs  router.rs
src/cover_gen/: mod.rs  templates.rs
src/db/: books.rs  explore.rs  links.rs  maintenance.rs  migrate.rs  mod.rs  searches.rs  time.rs
src/http/: cover.rs  download.rs  explore.rs  health.rs  metrics.rs  mod.rs  search.rs
src/models/: book.rs  cache.rs  mod.rs  openlibrary.rs
src/opds/: feeds.rs  links.rs  mod.rs  xml.rs
src/service/: cleanup.rs  cover.rs  download.rs  explore.rs  inflight.rs  metadata.rs  mod.rs  retry.rs  search.rs
