[package]
name = "shelfie"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
clap = { version = "4.6.0", features = ["derive", "env"] }
dashmap = "6"
futures = "0.3.32"
quick-xml = { version = "0.39.2", features = ["serialize"] }
rand = "0.10"
reqwest = { version = "0.13.2", features = ["json"] }
resvg = "0.47"
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
tiny-skia = "0.12"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
urlencoding = "2.1.3"

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
